# Game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists2.txt  __CMakeLists.txt  build.bat  build.sh  build_test.bat  build_unmocked.bat  build_windows.bat  installer_setup_file.ifp  main.cpp  make_graph.bat  old_CMakeLists.txt  test_config.h.in
levels/: game_level_01.gme  level04.gme
notes/: architecture.txt
resources/: high_scores.txt  ico.rc
resources/art/blender_files/: background.blend1  brick.blend  brick.blend1  character.blend  character.blend1  controls.blend1  flag.blend  notes.txt
resources/levels/: level1.ldtk  level2.ldtk  platformer_game.ldtk
resources/levels/level1/simplified/Level_0/: data.json
resources/levels/platformer_game/simplified/Level_1/: data.json
resources/levels/platformer_game/simplified/Level_2/: data.json
resources/levels/platformer_game/simplified/Level_5/: data.json
resources/shaders/: text.frag  text.vert
src/: app.cpp  app.h  camera.cpp  camera.h  constants.h  init.cpp  main.cpp  main.mocked.cpp  main.old.cpp  main.real.cpp  networking.cpp  networking.h  test_config.h  update.cpp  update.h
src/animation/: animation.cpp  animation.h
src/audio/: audio.cpp  audio.h
src/gameobjects/: gos.cpp  gos.h  gos.txt
src/input/: input.cpp  input.h  input.mocked.cpp
src/networking/: networking.cpp  networking.h  networking.mocked.cpp  networking.real.cpp
src/physics/: physics.cpp  physics.h
src/renderer/: renderer.cpp  renderer.h
src/renderer/basic/: shape_renders.cpp  shape_renders.h
src/renderer/opengl/: buffers.cpp  buffers.h  object_data.h  resources.cpp  resources.h  vertex.h
src/tests/: test.cpp  view.py
src/transform/: transform.cpp  transform.h
src/ui/: ui.cpp  ui.h
src/utils/: io.cpp  io.h  math.cpp  math.h  time.cpp  time.h
